TW-26 adding etaplius dockerfiles, mounting to registry.

--- a/etaplius_php/8.1/Dockerfile
+++ b/etaplius_php/8.1/Dockerfile
@@ -3,6 +3,8 @@ FROM registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php:8.1
 # Set working directory
 WORKDIR /var/www/etaplius
 
+USER root
+
 # NPM and Node Latest
 RUN curl -sL https://deb.nodesource.com/setup_16.x | bash
 RUN apt install -y nodejs
@@ -12,14 +14,14 @@ RUN apt-get update -y \
     && apt-get install -y nginx
 
 RUN apt-get update && apt-get install -y supervisor
-COPY docker/php/start-container /usr/local/bin/start-container
-COPY docker/php/supervisord-production.conf /etc/supervisor/conf.d/supervisord.conf
+COPY start-container /usr/local/bin/start-container
+COPY supervisord-production.conf /etc/supervisor/conf.d/supervisord.conf
 RUN chmod +x /usr/local/bin/start-container
 
 COPY --chown=www-data:www-data ./ /var/www/etaplius/
-COPY ./docker/php/local.ini /usr/local/etc/php/conf.d/local.ini
-COPY ./docker/php/www.conf /usr/local/etc/php-fpm.d/www.conf
-COPY ./docker/php/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+COPY local.ini /usr/local/etc/php/conf.d/local.ini
+COPY www.conf /usr/local/etc/php-fpm.d/www.conf
+COPY xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
 COPY .env.production .env
 # Expose port 9000 and start php-fpm server
@@ -37,19 +39,21 @@ RUN if [ $CRON_ENABLED = true ]; then \
     && service cron start  \
 ; fi
 
-RUN /usr/local/bin/composer install && \
-    npm install && \
-    php bin/console messenger:stop-workers && \
-    php bin/console c:c && \
-    npm run build \
-    && chmod -R 777 ./var/cache/
+RUN if [ -f "composer.json" ]; then \
+   /usr/local/bin/composer install && \
+   npm install && \
+   php bin/console messenger:stop-workers && \
+   php bin/console c:c && \
+   npm run build \
+   && chmod -R 777 ./var/cache/ \
+; fi
 
-COPY ./docker/nginx/conf.d/app.prod.conf /etc/nginx/sites-enabled/default
+COPY nginx/conf.d/app.prod.conf /etc/nginx/sites-enabled/default
 
-COPY ./docker/nginx/ssl/fullchain1.pem /etc/nginx/ssl/server.crt
-COPY ./docker/nginx/ssl/privkey1.pem /etc/nginx/ssl/server.key
+COPY nginx/ssl/fullchain1.pem /etc/nginx/ssl/server.crt
+COPY nginx/ssl/privkey1.pem /etc/nginx/ssl/server.key
 
-COPY docker/elk/elasticsearch/config/certs /usr/share/elasticsearch/config/certs
+COPY elasticsearch/certs /usr/share/elasticsearch/config/certs
 
 EXPOSE 80 443
 
