--- a/app/mailhog/latest/Dockerfile
+++ b/app/mailhog/latest/Dockerfile
@@ -18,7 +18,7 @@ RUN apk --no-cache add --virtual build-dependencies \
 # Add app_mailhog user/group with uid/gid 1000.
 # This is a workaround for boot2docker issue #581, see
 # https://github.com/boot2docker/boot2docker/issues/581
-RUN adduser -D -u 1000 app_mailhog
+RUN adduser -D -u 1000 mailhog
 
 USER mailhog
 
