--- a/app/php_xdebug/8.1/xdebug.ini
+++ b/app/php_xdebug/8.1/xdebug.ini
@@ -3,11 +3,12 @@ display_startup_errors=On
 display_errors=On
 
 [xdebug]
-xdebug.mode=develop,debug
+zend_extension=xdebug.so
+xdebug.mode=debug
 xdebug.start_with_request=yes
-xdebug.client_host=host.docker.internal
-xdebug.client_port=9003
+xdebug.discover_client_host=0
+xdebug.client_host=docker.for.mac.localhost
+; FOR UNIX
+;xdebug.client_host=host.docker.internal
 xdebug.idekey=PHPSTORM
-xdebug.discover_client_host=1
-xdebug.start_upon_error=yes
 xdebug.log_level=0
