--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ docker_build:
   stage: build
   script:
     - service docker start
+    - service docker status
     - if [$CI_COMMIT_REF_NAME == 'master']; then export APP_ENV="prod"; else export APP_ENV="test"; fi
     - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASSWORD
     - docker login $GITLAB_REGISTRY -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
