--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ stages:
 
 docker_build:
   stage: build
+  services:
+    - docker:dind
   script:
     - php -v
     - if [$CI_COMMIT_REF_NAME == 'master']; then export APP_ENV="prod"; else export APP_ENV="test"; fi
