--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,6 @@ stages:
   - validate
   - deploy
 
-variables:
-  APP_ENV: 'test'
-
 docker_image_deploy:
   stage: deploy
   services:
@@ -27,6 +24,7 @@ docker_image_validate:
   rules:
     - if: $CI_COMMIT_BRANCH != "master"
   script:
+    - export APP_ENV="test"
     - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASSWORD
     - docker login $GITLAB_REGISTRY -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
     - php docker.php
