TW-77 MR fixes.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
 
 install_dependencies:
   stage: dependencies
+  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:8.1
   only: [branches]
   needs: []
   cache:
@@ -40,6 +41,7 @@ docker_image_deploy:
 
 phpcs:
   stage: validate
+  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:8.1
   only: [branches]
   allow_failure: true
   needs:
@@ -63,6 +65,7 @@ phpcs:
 
 php-cs-fixer:
   stage: validate
+  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:8.1
   only: [branches]
   needs:
     - job: install_dependencies
@@ -85,6 +88,7 @@ php-cs-fixer:
 
 phpstan:
   stage: validate
+  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:8.1
   only: [branches]
   needs:
     - job: install_dependencies
