--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
             "phpro/grumphp": true
         }
     },
+    "require": {
+        "php": "^7.4"
+    },
     "require-dev": {
         "phpstan/phpstan": "^1.8",
         "phpro/grumphp": "^1.13",
