TW-77 MR fixes.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ phpcs:
   tags:
     - docker
   script:
+    - 'vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard'
     - 'vendor/bin/phpcs --report=junit --report-junit=phpcs-report.xml *.php'
   artifacts:
     expire_in: 1 hour
