--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,12 @@
         "phpro/grumphp": "^1.13",
         "friendsofphp/php-cs-fixer": "^3.11",
         "squizlabs/php_codesniffer": "*",
-        "kubawerlos/php-cs-fixer-custom-fixers": "^3.11"
+        "kubawerlos/php-cs-fixer-custom-fixers": "^3.11",
+        "escapestudios/symfony2-coding-standard": "^2.1"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard"
+        ]
     }
 }
