--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "friendsofphp/php-cs-fixer": "^3.11",
         "squizlabs/php_codesniffer": "*",
         "kubawerlos/php-cs-fixer-custom-fixers": "^3.11",
-        "escapestudios/symfony2-coding-standard": "^2.1",
+        "escapestudios/symfony2-coding-standard": "3.x-dev",
         "scoding/cs-ruleset": "^1.0.1"
     },
     "scripts": {
