--- a/etaplius/php/8.1/Dockerfile
+++ b/etaplius/php/8.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM scodocker/app_php:8.1
+FROM registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_{{platform}}:8.1
 
 # Set working directory
 WORKDIR /var/www/etaplius
