--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: $GITLAB_REGISTRY/sc-rep/scoding/internal7/docker-images/app_docker_amd64:latest
+image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker_amd64:latest
 
 stages:
   - dependencies
@@ -10,7 +10,7 @@ variables:
 
 install_dependencies:
   stage: dependencies
-  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
   only: [branches]
   needs: []
   cache:
@@ -41,7 +41,7 @@ docker_image_deploy:
 
 phpcs:
   stage: validate
-  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
   only: [branches]
   allow_failure: true
   needs:
@@ -66,7 +66,7 @@ phpcs:
 
 php-cs-fixer:
   stage: validate
-  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
   only: [branches]
   needs:
     - job: install_dependencies
@@ -89,7 +89,7 @@ php-cs-fixer:
 
 phpstan:
   stage: validate
-  image: registry.gitlab.com/sc-rep/scoding/internal7/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
   only: [branches]
   needs:
     - job: install_dependencies
