--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,8 +35,7 @@ docker_image_deploy:
     - master
   when: manual
   script:
-    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASSWORD
-    - docker login $GITLAB_REGISTRY -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
+    - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER_SCODING -p $GITLAB_REGISTRY_PASSWORD_SCODING
     - php docker.php
 
 phpcs:
@@ -117,8 +116,5 @@ docker_image_validate:
   only:
     - branches
   script:
-    - echo $GITLAB_REGISTRY_SCODING
-    - echo $GITLAB_REGISTRY_USER_SCODING
-    - echo $GITLAB_REGISTRY_PASSWORD_SCODING
-    - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER_SCODING -p $GITLAB_REGISTRY_PASSWORD_SCODING
+    - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
     - php docker.php --only-build
