--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -116,7 +116,7 @@ docker_image_validate:
     - name: docker:dind
       alias: docker
   variables:
-    DOCKER_HOST: unix:///var/run/docker.sock
+    DOCKER_HOST: tcp://127.0.0.1:2375
   only:
     - branches
   script:
