TW-87 migrating to new gitlab.

--- a/app/docker/latest/Dockerfile
+++ b/app/docker/latest/Dockerfile
@@ -1,7 +1,6 @@
-FROM docker:latest
+FROM --platform=$BUILDPLATFORM docker:latest
+ARG BUILDPLATFORM
 
 WORKDIR /var/www/html
-
 USER root
-
 RUN apk update && apk upgrade && apk add php
