--- a/inventory-x/php_xdebug/8.1/Dockerfile
+++ b/inventory-x/php_xdebug/8.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.gitlab.scoding.com/scoding-internal/docker-images/app_php_xdebug_{{platform}}:8.1
+FROM registry.gitlab.scoding.com/scoding-internal/docker-images/app_php_xdebug:8.1
 
 USER root
 
