TW-87 migrating to new gitlab.

--- a/app/php_xdebug/8.1/Dockerfile
+++ b/app/php_xdebug/8.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.gitlab.scoding.com/scoding-internal/docker-images/app_php:8.1
+FROM --platform=linux/amd64 registry.gitlab.scoding.com/scoding-internal/docker-images/app_php:8.1
 
 # Set working directory
 WORKDIR /var/www/html
