--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker_amd64:latest
+image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
 
 stages:
   - dependencies
@@ -10,7 +10,7 @@ variables:
 
 install_dependencies:
   stage: dependencies
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
   only: [branches]
   needs: []
   cache:
@@ -29,6 +29,7 @@ install_dependencies:
 
 docker_image_deploy:
   stage: deploy
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
   services:
     - docker:dind
   only:
@@ -36,12 +37,12 @@ docker_image_deploy:
   when: manual
   script:
     - docker image prune --force
-    - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER_SCODING -p $GITLAB_REGISTRY_PASSWORD_SCODING
+    - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
     - php docker.php
 
 phpcs:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
   only: [branches]
   allow_failure: true
   needs:
@@ -66,7 +67,7 @@ phpcs:
 
 php-cs-fixer:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
   only: [branches]
   needs:
     - job: install_dependencies
@@ -89,7 +90,7 @@ php-cs-fixer:
 
 phpstan:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php_amd64:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
   only: [branches]
   needs:
     - job: install_dependencies
@@ -110,7 +111,7 @@ phpstan:
 
 docker_image_validate:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker_amd64:latest
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
   needs:
     - job: install_dependencies
   services:
