TW-87 finalizing docker image changes.

--- a/app/docker/latest/Dockerfile
+++ b/app/docker/latest/Dockerfile
@@ -1,5 +1,4 @@
-FROM --platform=$BUILDPLATFORM docker:latest
-ARG BUILDPLATFORM
+FROM --platform=linux/amd64 docker:latest
 
 WORKDIR /var/www/html
 USER root
