--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ docker_image_deploy:
     - master
   when: manual
   script:
-    - docker image prune --force
+    - docker system prune --force
     - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
     - php docker.php
 
@@ -119,6 +119,6 @@ docker_image_validate:
   only:
     - branches
   script:
-    - docker image prune --force
+    - docker system prune --force
     - docker login $GITLAB_REGISTRY_SCODING -u $GITLAB_REGISTRY_USER -p $GITLAB_REGISTRY_PASSWORD
     - php docker.php --only-build
