--- a/app/php/8.1/Dockerfile
+++ b/app/php/8.1/Dockerfile
@@ -71,6 +71,8 @@ RUN install-php-extensions ssh2
 # Change current user to www
 USER root
 
+RUN apt-get install sudo
+
 RUN if ! grep -q "gitlab.scoding.com" /etc/hosts; then echo "172.17.2.161 gitlab.scoding.com" | sudo tee -a /etc/hosts; fi
 
 COPY local.ini /usr/local/etc/php/conf.d/local.ini
