TW-87 creating new php image version, fixing composer permissions.

--- a/app/php/7.4/Dockerfile
+++ b/app/php/7.4/Dockerfile
@@ -68,7 +68,7 @@ RUN install-php-extensions ssh2
 # Change current user to www
 USER root
 
-RUN apt-get install sudo
+RUN apt-get install -y sudo
 
 RUN if ! grep -q "gitlab.scoding.com" /etc/hosts; then echo "172.17.2.161 gitlab.scoding.com" | sudo tee -a /etc/hosts; fi
 
