--- a/app/php/8.0/Dockerfile
+++ b/app/php/8.0/Dockerfile
@@ -71,6 +71,8 @@ RUN install-php-extensions ssh2
 # Change current user to www
 USER root
 
+RUN cat /etc/hosts
+
 RUN apt-get update -y && apt-get install -y sudo
 
 RUN if ! grep -q "gitlab.scoding.com" /etc/hosts; then echo "172.17.2.161 gitlab.scoding.com" | sudo tee -a /etc/hosts; fi
