--- a/app/php/8.1/Dockerfile
+++ b/app/php/8.1/Dockerfile
@@ -81,6 +81,8 @@ COPY xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
 RUN chown -R www-data:www-data ./
 
+RUN cat /etc/hosts
+
 RUN apt-get update -y && apt-get install -y sendmail libpng-dev
 
 RUN apt-get install -y \
