--- a/images/app/docker/latest/Dockerfile
+++ b/images/app/docker/latest/Dockerfile
@@ -23,6 +23,10 @@ RUN apk update && apk add wget \
 		     php-xmlwriter \
 		     php-simplexml \
 		     php-session \
+		     php-posix \
 		     php-dom --repository http://nl.alpinelinux.org/alpine/edge/testing/ && rm /var/cache/apk/*
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
+RUN apk add nodejs-current npm
+RUN npm install --global yarn
+RUN mkdir -p /.cache && mkdir -p /.yarn && chown -R 1000:1000 /.cache && chown -R 1000:1000 /.yarn && touch /.yarnrc && chown -R 1000:1000 /.yarnrc
