--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,133 @@
 {
     "name": "scoding/docker-images",
-    "description": "Scoding internal .docker images for docker",
+    "description": "Scoding docker images internal project.",
     "type": "project",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Elvinas",
-            "email": "elvinas.stanionis@scoding.com"
-        }
-    ],
-    "minimum-stability": "dev",
+    "license": "proprietary",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=8.1",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.13",
+        "kubawerlos/php-cs-fixer-custom-fixers": "^3.11",
+        "nelmio/api-doc-bundle": "^4.10",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.8",
+        "scoding/cs-ruleset": "^1.0.2",
+        "sensio/framework-extra-bundle": "^6.1",
+        "sentry/sentry-symfony": "^4.3",
+        "symfony/asset": "6.1.*",
+        "symfony/console": "6.1.*",
+        "symfony/doctrine-messenger": "6.1.*",
+        "symfony/dotenv": "6.1.*",
+        "symfony/expression-language": "6.1.*",
+        "symfony/flex": "^2",
+        "symfony/form": "6.1.*",
+        "symfony/framework-bundle": "6.1.*",
+        "symfony/http-client": "6.1.*",
+        "symfony/intl": "6.1.*",
+        "symfony/mailer": "6.1.*",
+        "symfony/mime": "6.1.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/notifier": "6.1.*",
+        "symfony/process": "6.1.*",
+        "symfony/property-access": "6.1.*",
+        "symfony/property-info": "6.1.*",
+        "symfony/proxy-manager-bridge": "6.1.*",
+        "symfony/runtime": "6.1.*",
+        "symfony/security-bundle": "6.1.*",
+        "symfony/serializer": "6.1.*",
+        "symfony/string": "6.1.*",
+        "symfony/translation": "6.1.*",
+        "symfony/twig-bundle": "6.1.*",
+        "symfony/validator": "6.1.*",
+        "symfony/web-link": "6.1.*",
+        "symfony/webpack-encore-bundle": "^1.16",
+        "symfony/yaml": "6.1.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
+    },
     "config": {
         "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/flex": true,
+            "symfony/runtime": true,
             "phpro/grumphp": true
+        },
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
         }
     },
-    "require": {
-        "php": "^7.4"
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
     },
-    "require-dev": {
-        "phpstan/phpstan": "^1.8",
-        "phpro/grumphp": "^1.13",
-        "friendsofphp/php-cs-fixer": "^3.11",
-        "squizlabs/php_codesniffer": "*",
-        "kubawerlos/php-cs-fixer-custom-fixers": "^3.11",
-        "escapestudios/symfony2-coding-standard": "3.x-dev",
-        "scoding/cs-ruleset": "^1.0.2"
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
     },
     "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
+            "@auto-scripts",
             "vendor/bin/phpcs --config-set installed_paths vendor/escapestudios/symfony2-coding-standard"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
         ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "6.1.*"
+        }
+    },
+    "require-dev": {
+        "escapestudios/symfony2-coding-standard": "^3.13",
+        "friendsofphp/php-cs-fixer": "^3.11",
+        "jonmldr/grumphp-doctrine-task": "^2.1",
+        "phpro/grumphp": "^1.13",
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-phpunit": "^1.1",
+        "phpstan/phpstan-symfony": "^1.2",
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "*",
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
+        "symfony/debug-bundle": "6.1.*",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^6.1",
+        "symfony/stopwatch": "6.1.*",
+        "symfony/web-profiler-bundle": "6.1.*"
     },
     "repositories": {
         "scoding-cs-ruleset": {
             "type": "vcs",
-            "url": "https://gitlab.com/scoding-internal/scoding-cs-rules.git"
+            "url": "https://gitlab.scoding.com/scoding-internal/scoding-cs-rules.git"
         }
     }
 }
