--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,10 +1,22 @@
 includes:
     - 'phpstan-baseline.neon'
+    - 'vendor/phpstan/phpstan-doctrine/extension.neon'
+    - 'vendor/phpstan/phpstan-doctrine/rules.neon'
+    - 'vendor/phpstan/phpstan-phpunit/extension.neon'
+    - 'vendor/phpstan/phpstan-phpunit/rules.neon'
+    - 'vendor/phpstan/phpstan-symfony/extension.neon'
+    - 'vendor/phpstan/phpstan-symfony/rules.neon'
 
 parameters:
     level: 6
     paths:
-        - docker.php
+        - config
+        - migrations
+        - public
+        - src
+        - tests
+    bootstrapFiles:
+        - tests/phpstanBootstrap.php
     parallel:
         processTimeout: 150.0
     tmpDir: .phpstan
