OPS-71 adding symfony framework

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 install_dependencies:
   stage: dependencies
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
   only: [branches]
   needs: []
   cache:
@@ -42,7 +42,7 @@ docker_image_deploy:
 
 phpcs:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
   only: [branches]
   allow_failure: true
   needs:
@@ -67,7 +67,7 @@ phpcs:
 
 php-cs-fixer:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
   only: [branches]
   needs:
     - job: install_dependencies
@@ -90,7 +90,7 @@ php-cs-fixer:
 
 phpstan:
   stage: validate
-  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_php:7.4
+  image: $GITLAB_REGISTRY/scoding-internal/docker-images/app_docker:latest
   only: [branches]
   needs:
     - job: install_dependencies
