--- a/images/app/elasticsearch/8.4.1/Dockerfile
+++ b/images/app/elasticsearch/8.4.1/Dockerfile
@@ -1,4 +1,4 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:8.4.1
 
-COPY config/certs /usr/share/elasticsearch/config/certs
+#COPY config/certs /usr/share/elasticsearch/config/certs
 COPY config/elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
