--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^3.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "easycorp/easyadmin-bundle": "^4.6",
+        "knplabs/knp-paginator-bundle": "^6.2",
         "kubawerlos/php-cs-fixer-custom-fixers": "^3.11",
-        "nelmio/api-doc-bundle": "^4.10",
+        "lexik/jwt-authentication-bundle": "*",
+        "nelmio/api-doc-bundle": "^4.11",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
         "scoding/cs-ruleset": "^1.0.2",
@@ -38,6 +42,7 @@
         "symfony/property-access": "6.1.*",
         "symfony/property-info": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
+        "symfony/rate-limiter": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
@@ -56,7 +61,8 @@
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
             "symfony/runtime": true,
-            "phpro/grumphp": true
+            "phpro/grumphp": true,
+            "pestphp/pest-plugin": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -101,14 +107,17 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
-            "require": "6.1.*"
+            "allow-contrib": true,
+            "require": "6.1.*",
+            "docker": true
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "escapestudios/symfony2-coding-standard": "^3.13",
         "friendsofphp/php-cs-fixer": "^3.11",
         "jonmldr/grumphp-doctrine-task": "^2.1",
+        "pestphp/pest": "^1.22",
         "phpro/grumphp": "^1.13",
         "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-doctrine": "^1.3",
