--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "nelmio/api-doc-bundle": "^4.11",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
-        "scoding/cs-ruleset": "^1.0.2",
         "sensio/framework-extra-bundle": "^6.1",
         "sentry/sentry-symfony": "^4.3",
         "symfony/asset": "6.1.*",
@@ -62,7 +61,8 @@
             "symfony/flex": true,
             "symfony/runtime": true,
             "phpro/grumphp": true,
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -132,11 +132,5 @@
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
-    },
-    "repositories": {
-        "scoding-cs-ruleset": {
-            "type": "vcs",
-            "url": "https://gitlab.scoding.com/scoding-internal/scoding-cs-rules.git"
-        }
     }
 }
