--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "nelmio/api-doc-bundle": "^4.11",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
-        "sensio/framework-extra-bundle": "^6.1",
+        "psr/http-factory": "^1.0",
         "sentry/sentry-symfony": "^4.3",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
